Working on general layout, dummy content

--- a/index.html
+++ b/index.html
@@ -5,8 +5,75 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="navigation-section">
+        <div class="logo">
+            <h1>Dashboard</h1>
+        </div>
+        <div class="nav-items-1">
+            <div class="nav-item">
+                <img src="" alt="">
+                <p>Nav item 1</p>
+            </div>
+            <div class="nav-item">
+                <img src="" alt="">
+                <p>Nav item 2</p>
+            </div>
+            <div class="nav-item">
+                <img src="" alt="">
+                <p>Nav item 3</p>
+            </div>
+            <div class="nav-item">
+                <img src="" alt="">
+                <p>Nav item 4</p>
+            </div>
+            <div class="nav-item">
+                <img src="" alt="">
+                <p>Nav item 5</p>
+            </div>
+            <div class="nav-item">
+                <img src="" alt="">
+                <p>Nav item 6</p>
+            </div>
+        </div>
+        <div class="nav-items-2">
+            <div class="nav-item">
+                <img src="" alt="">
+                <p>Nav item 1</p>
+            </div>
+            <div class="nav-item">
+                <img src="" alt="">
+                <p>Nav item 2</p>
+            </div>
+            <div class="nav-item">
+                <img src="" alt="">
+                <p>Nav item 3</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="main-section">
+        <div class="header-section">
+
+        </div>
+        <div class="projects-section">
+            <h2>Your projects</h2>
+            <div class="projects">
+                <div class="project">Project</div>
+                <div class="project">Project</div>
+                <div class="project">Project</div>
+                <div class="project">Project</div>
+                <div class="project">Project</div>
+                <div class="project">Project</div>
+
+            </div>
+        </div>
+        <div class="announcements-section">
+
+        </div>
+        <div class="trending-section"></div>
+    </div>
 </body>
 </html>
