General layout done

--- a/index.html
+++ b/index.html
@@ -9,55 +9,82 @@
 </head>
 <body>
     <div class="navigation-section">
-        <div class="logo">
-            <h1>Dashboard</h1>
+        <div class="wrapper">
+            <div class="logo">
+                <h1>Dashboard</h1>
+            </div>
+            <div class="nav-items-1">
+                <div class="nav-item">
+                    <img src="" alt="">
+                    <p>Nav item 1</p>
+                </div>
+                <div class="nav-item">
+                    <img src="" alt="">
+                    <p>Nav item 2</p>
+                </div>
+                <div class="nav-item">
+                    <img src="" alt="">
+                    <p>Nav item 3</p>
+                </div>
+                <div class="nav-item">
+                    <img src="" alt="">
+                    <p>Nav item 4</p>
+                </div>
+                <div class="nav-item">
+                    <img src="" alt="">
+                    <p>Nav item 5</p>
+                </div>
+                <div class="nav-item">
+                    <img src="" alt="">
+                    <p>Nav item 6</p>
+                </div>
+            </div>
+            <div class="nav-items-2">
+                <div class="nav-item">
+                    <img src="" alt="">
+                    <p>Nav item 1</p>
+                </div>
+                <div class="nav-item">
+                    <img src="" alt="">
+                    <p>Nav item 2</p>
+                </div>
+                <div class="nav-item">
+                    <img src="" alt="">
+                    <p>Nav item 3</p>
+                </div>
+            </div>
         </div>
-        <div class="nav-items-1">
-            <div class="nav-item">
-                <img src="" alt="">
-                <p>Nav item 1</p>
+    </div>
+
+    <div class="header-section">
+        <div class="top">
+            <div class="search">
+                <img src="" alt="search">
+                <input type="text" name="" id="">
             </div>
-            <div class="nav-item">
-                <img src="" alt="">
-                <p>Nav item 2</p>
-            </div>
-            <div class="nav-item">
-                <img src="" alt="">
-                <p>Nav item 3</p>
-            </div>
-            <div class="nav-item">
-                <img src="" alt="">
-                <p>Nav item 4</p>
-            </div>
-            <div class="nav-item">
-                <img src="" alt="">
-                <p>Nav item 5</p>
-            </div>
-            <div class="nav-item">
-                <img src="" alt="">
-                <p>Nav item 6</p>
+            <div class="top-right">
+                <div class="bell"></div>
+                <div class="profile-pic"></div>
+                <p>Morgan Oakley</p>
             </div>
         </div>
-        <div class="nav-items-2">
-            <div class="nav-item">
-                <img src="" alt="">
-                <p>Nav item 1</p>
+        <div class="bottom">
+            <div class="bottom-left">
+                <div class="profile-pic"></div>
+                <div class="greeting">
+                    <p>Hi there,</p>
+                    <h2>Morgan Oakley (@morgan)</h2>
+                </div>
             </div>
-            <div class="nav-item">
-                <img src="" alt="">
-                <p>Nav item 2</p>
-            </div>
-            <div class="nav-item">
-                <img src="" alt="">
-                <p>Nav item 3</p>
+            <div class="bottom-right">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
             </div>
         </div>
     </div>
 
     <div class="main-section">
-        <div class="header-section">
-
-        </div>
         <div class="projects-section">
             <h2>Your projects</h2>
             <div class="projects">
@@ -71,9 +98,17 @@
             </div>
         </div>
         <div class="announcements-section">
-
+            <h2>Announcements</h2>
+            <div class="wrapper">
+                Announcements
+            </div>
         </div>
-        <div class="trending-section"></div>
+        <div class="trending-section">
+            <h2>Trending</h2>
+            <div class="wrapper">
+
+            </div>
+        </div>
     </div>
 </body>
 </html>
