Navigation section completely styled

--- a/index.html
+++ b/index.html
@@ -6,51 +6,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
 </head>
 <body>
     <div class="navigation-section">
         <div class="wrapper">
             <div class="logo">
+                <span class="material-icons">dashboard</span>
                 <h1>Dashboard</h1>
             </div>
             <div class="nav-items-1">
                 <div class="nav-item">
-                    <img src="" alt="">
-                    <p>Nav item 1</p>
+                    <span class="material-icons">home</span>
+                    <p>Home</p>
                 </div>
                 <div class="nav-item">
-                    <img src="" alt="">
-                    <p>Nav item 2</p>
+                    <span class="material-icons">account_circle</span>
+                    <p>Profile</p>
                 </div>
                 <div class="nav-item">
-                    <img src="" alt="">
-                    <p>Nav item 3</p>
+                    <span class="material-icons">mode_comment</span>
+                    <p>Messages</p>
                 </div>
                 <div class="nav-item">
-                    <img src="" alt="">
-                    <p>Nav item 4</p>
+                    <span class="material-icons">watch_later</span>
+                    <p>History</p>
                 </div>
                 <div class="nav-item">
-                    <img src="" alt="">
-                    <p>Nav item 5</p>
+                    <span class="material-icons">task</span>
+                    <p>Tasks</p>
                 </div>
                 <div class="nav-item">
-                    <img src="" alt="">
-                    <p>Nav item 6</p>
+                    <span class="material-icons">groups</span>
+                    <p>Communities</p>
                 </div>
             </div>
             <div class="nav-items-2">
                 <div class="nav-item">
-                    <img src="" alt="">
-                    <p>Nav item 1</p>
+                    <span class="material-icons">settings</span>
+                    <p>Settings</p>
                 </div>
                 <div class="nav-item">
-                    <img src="" alt="">
-                    <p>Nav item 2</p>
+                    <span class="material-icons">help_center</span>
+                    <p>Support</p>
                 </div>
                 <div class="nav-item">
-                    <img src="" alt="">
-                    <p>Nav item 3</p>
+                    <span class="material-icons">verified_user</span>
+                    <p>Privacy</p>
                 </div>
             </div>
         </div>
