Header section completely styled

--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
     <div class="header-section">
         <div class="top">
             <div class="search">
-                <img src="" alt="search">
+                <span class="material-icons">search</span>
                 <input type="text" name="" id="">
             </div>
             <div class="top-right">
-                <div class="bell"></div>
+                <span class="material-icons">notifications_active</span>
                 <div class="profile-pic"></div>
                 <p>Morgan Oakley</p>
             </div>
