Project section completely styled

--- a/index.html
+++ b/index.html
@@ -91,12 +91,60 @@
         <div class="projects-section">
             <h2>Your projects</h2>
             <div class="projects">
-                <div class="project">Project</div>
-                <div class="project">Project</div>
-                <div class="project">Project</div>
-                <div class="project">Project</div>
-                <div class="project">Project</div>
-                <div class="project">Project</div>
+                <div class="project">
+                    <h2>Project</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur tempore asperiores vitae qui sapiente nisi quo error quas, nostrum ut.</p>
+                    <div class="icons">
+                        <span class="material-icons">add_task</span>
+                        <span class="material-icons">attach_file</span>
+                        <span class="material-icons">share</span>
+                    </div>
+                </div>
+                <div class="project">
+                    <h2>Project</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur tempore asperiores vitae qui sapiente nisi quo error quas, nostrum ut.</p>
+                    <div class="icons">
+                        <span class="material-icons">add_task</span>
+                        <span class="material-icons">attach_file</span>
+                        <span class="material-icons">share</span>
+                    </div>
+                </div>
+                <div class="project">
+                    <h2>Project</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur tempore asperiores vitae qui sapiente nisi quo error quas, nostrum ut.</p>
+                    <div class="icons">
+                        <span class="material-icons">add_task</span>
+                        <span class="material-icons">attach_file</span>
+                        <span class="material-icons">share</span>
+                    </div>
+                </div>
+                <div class="project">
+                    <h2>Project</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur tempore asperiores vitae qui sapiente nisi quo error quas, nostrum ut.</p>
+                    <div class="icons">
+                        <span class="material-icons">add_task</span>
+                        <span class="material-icons">attach_file</span>
+                        <span class="material-icons">share</span>
+                    </div>
+                </div>
+                <div class="project">
+                    <h2>Project</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur tempore asperiores vitae qui sapiente nisi quo error quas, nostrum ut.</p>
+                    <div class="icons">
+                        <span class="material-icons">add_task</span>
+                        <span class="material-icons">attach_file</span>
+                        <span class="material-icons">share</span>
+                    </div>
+                </div>
+                <div class="project">
+                    <h2>Project</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur tempore asperiores vitae qui sapiente nisi quo error quas, nostrum ut.</p>
+                    <div class="icons">
+                        <span class="material-icons">add_task</span>
+                        <span class="material-icons">attach_file</span>
+                        <span class="material-icons">share</span>
+                    </div>
+                </div>
 
             </div>
         </div>
