Announcement and Trending section completely styled

--- a/index.html
+++ b/index.html
@@ -151,13 +151,45 @@
         <div class="announcements-section">
             <h2>Announcements</h2>
             <div class="wrapper">
-                Announcements
+                <div class="announcement">
+                    <h3>Site Maintenance</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem dolor repellat cupiditate rerum vel similique rem suscipit. Dolores, asperiores veritatis!</p>
+                </div>
+                <hr>
+                <div class="announcement">
+                    <h3>Comunity Share Day</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam aliquam commodi aliquid molestiae, vero ut.</p>
+                </div>
+                <hr>
+                <div class="announcement">
+                    <h3>Updated Privacy Policy</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas neque minima consectetur, maxime iusto odit error excepturi. Quae corrupti reiciendis alias fugiat?</p>
+                </div>
             </div>
         </div>
         <div class="trending-section">
             <h2>Trending</h2>
             <div class="wrapper">
-
+                <div class="trending-account">
+                    <div class="profile-pic"></div>
+                    <div class="name">@tegan</div>
+                    <p>World Peace Builder</p>
+                </div>
+                <div class="trending-account">
+                    <div class="profile-pic"></div>
+                    <div class="name">@morgan</div>
+                    <p>Professional Minecrafter</p>
+                </div>
+                <div class="trending-account">
+                    <div class="profile-pic"></div>
+                    <div class="name">@kendall</div>
+                    <p>Toilet Paper Afficionado</p>
+                </div>
+                <div class="trending-account">
+                    <div class="profile-pic"></div>
+                    <div class="name">@alex</div>
+                    <p>Game Developer</p>
+                </div>
             </div>
         </div>
     </div>
