--- a/index.html
+++ b/index.html
@@ -67,13 +67,17 @@
             </div>
             <div class="top-right">
                 <span class="material-icons">notifications_active</span>
-                <div class="profile-pic"></div>
+                <div class="profile-pic">
+                    <img src="img/profile.png" alt="">
+                </div>
                 <p>Morgan Oakley</p>
             </div>
         </div>
         <div class="bottom">
             <div class="bottom-left">
-                <div class="profile-pic"></div>
+                <div class="profile-pic">
+                    <img src="img/profilepic.jpeg" alt="">
+                </div>
                 <div class="greeting">
                     <p>Hi there,</p>
                     <h2>Morgan Oakley (@morgan)</h2>
