--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <h2>Your projects</h2>
             <div class="projects">
                 <div class="project">
-                    <h2>Project</h2>
+                    <h2>Cool Project</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur tempore asperiores vitae qui sapiente nisi quo error quas, nostrum ut.</p>
                     <div class="icons">
                         <span class="material-icons">add_task</span>
@@ -105,7 +105,7 @@
                     </div>
                 </div>
                 <div class="project">
-                    <h2>Project</h2>
+                    <h2>Hard Project</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur tempore asperiores vitae qui sapiente nisi quo error quas, nostrum ut.</p>
                     <div class="icons">
                         <span class="material-icons">add_task</span>
@@ -114,7 +114,7 @@
                     </div>
                 </div>
                 <div class="project">
-                    <h2>Project</h2>
+                    <h2>Fixing the World Hunger</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur tempore asperiores vitae qui sapiente nisi quo error quas, nostrum ut.</p>
                     <div class="icons">
                         <span class="material-icons">add_task</span>
@@ -123,7 +123,7 @@
                     </div>
                 </div>
                 <div class="project">
-                    <h2>Project</h2>
+                    <h2>Project X</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur tempore asperiores vitae qui sapiente nisi quo error quas, nostrum ut.</p>
                     <div class="icons">
                         <span class="material-icons">add_task</span>
@@ -132,7 +132,7 @@
                     </div>
                 </div>
                 <div class="project">
-                    <h2>Project</h2>
+                    <h2>Small quirky project</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur tempore asperiores vitae qui sapiente nisi quo error quas, nostrum ut.</p>
                     <div class="icons">
                         <span class="material-icons">add_task</span>
@@ -141,7 +141,7 @@
                     </div>
                 </div>
                 <div class="project">
-                    <h2>Project</h2>
+                    <h2>Making Personal Portflio</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequuntur tempore asperiores vitae qui sapiente nisi quo error quas, nostrum ut.</p>
                     <div class="icons">
                         <span class="material-icons">add_task</span>
@@ -175,22 +175,22 @@
             <h2>Trending</h2>
             <div class="wrapper">
                 <div class="trending-account">
-                    <div class="profile-pic"></div>
+                    <div class="profile-pic"><img src="img/ape1.png" alt=""></div>
                     <div class="name">@tegan</div>
                     <p>World Peace Builder</p>
                 </div>
                 <div class="trending-account">
-                    <div class="profile-pic"></div>
+                    <div class="profile-pic"><img src="img/ape2.png" alt=""></div>
                     <div class="name">@morgan</div>
                     <p>Professional Minecrafter</p>
                 </div>
                 <div class="trending-account">
-                    <div class="profile-pic"></div>
+                    <div class="profile-pic"><img src="img/ape3.png" alt=""></div>
                     <div class="name">@kendall</div>
                     <p>Toilet Paper Afficionado</p>
                 </div>
                 <div class="trending-account">
-                    <div class="profile-pic"></div>
+                    <div class="profile-pic"><img src="img/ape4.png" alt=""></div>
                     <div class="name">@alex</div>
                     <p>Game Developer</p>
                 </div>
